fixes for public release

--- a/ModFiles/resources.cfg
+++ b/ModFiles/resources.cfg
@@ -2,4 +2,5 @@
 	<Directory Path="/config" AddSubDirs="true"/>
 	<Directory Path="/entities" AddSubDirs="true"/>
 	<Directory Path="/maps" AddSubDirs="true"/>
+	<Directory Path="/static_objects" AddSubDirs="true"/>
 </Resources>
